# patential

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  proto.sh
go/pkg/: README.md
go/pkg/log/: BUILD.bazel
go/pkg/testutil/: BUILD.bazel
go/svc/patent/: README.md
go/svc/patent/cmd/: BUILD.bazel  main.go
go/svc/patent/internal/service/: BUILD.bazel  service.go  service_test.go
go/svc/patent/internal/service/testdata/: schema.sql
go/svc/patent/internal/store/: BUILD.bazel  store.go  store_test.go
go/svc/patent/proto/service/: BUILD.bazel  service.pb.go  service.proto
golang/: .gitignore
golang/pkg/log/: BUILD.bazel  log.go
golang/pkg/testutil/: BUILD.bazel  sqlite.go
golang/svc/patent/: README.md  doc.go  skaffold.yaml
golang/svc/patent/cmd/: BUILD.bazel  main.go
golang/svc/patent/internal/service/: BUILD.bazel  service.go  service_test.go
golang/svc/patent/internal/store/: BUILD.bazel  store.go
golang/svc/patent/k8s/: BUILD.bazel  skaffold.yaml
golang/svc/patent/k8s/base/: kustomization.yaml  patent.yaml
golang/svc/patent/k8s/overlays/pro/: kustomization.yaml
golang/svc/patent/proto/service/: BUILD.bazel  service.pb.go
python-lang/pipelines/onboarding/: README.MD  main.py  requirements.txt
python-lang/pipelines/onboarding/dofns/: __init__.py
python/pipelines/onboarding/: README.MD  application-numbers-sample.txt  main.py  schema.sql
python/pipelines/onboarding/dofns/: query_publications.py  upsert_patents_to_db.py
ruby/: .gitignore
ruby-lang/apps/portal/: .env.example  Dockerfile  README.md  skaffold.yaml
ruby-lang/apps/portal/app/controllers/: patents_controller.rb
ruby-lang/apps/portal/app/helpers/: application_helper.rb
ruby-lang/apps/portal/app/javascript/packs/: application.js
ruby-lang/apps/portal/app/javascript/stylesheets/: application.scss
ruby-lang/apps/portal/app/services/: patent_service.rb
ruby-lang/apps/portal/app/views/dashboards/: show.html.erb
ruby-lang/apps/portal/app/views/devise/registrations/: edit.html.erb
ruby-lang/apps/portal/app/views/devise/sessions/: new.html.erb
ruby-lang/apps/portal/app/views/layouts/: application.html.erb
ruby-lang/apps/portal/app/views/patents/: index.html.erb
ruby-lang/apps/portal/config/: database.yml  routes.rb
ruby-lang/apps/portal/config/initializers/: action_view.rb  devise.rb
ruby-lang/apps/portal/kustomize/base/: kustomization.yaml  portal.yaml
ruby-lang/apps/portal/lib/proto/svc/patent/: service_pb.rb  service_services_pb.rb
ruby/apps/portal/: Gemfile  README.md  package.json
ruby/apps/portal/app/controllers/: patents_controller.rb
ruby/apps/portal/app/helpers/: application_helper.rb
ruby/apps/portal/app/javascript/stylesheets/: application.scss
ruby/apps/portal/app/views/dashboards/: show.html.erb
ruby/apps/portal/app/views/devise/registrations/: new.html.erb
ruby/apps/portal/app/views/layouts/: application.html.erb
ruby/apps/portal/app/views/patents/: index.html.erb
ruby/apps/portal/config/: credentials.yml.enc  database.yml  routes.rb
ruby/apps/portal/db/: schema.rb
ruby/apps/portal/lib/proto/svc/patent/: service_pb.rb  service_services_pb.rb
