load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["log.go"],
    importpath = "github.com/patential/go/pkg/log",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_joonix_log//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
