load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/patential/go/svc/patent/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/log:go_default_library",
        "//go/svc/patent/internal/service:go_default_library",
        "//go/svc/patent/internal/store:go_default_library",
        "//go/svc/patent/proto/service:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
