load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/patential/go/svc/patent/internal/service",
    visibility = ["//go/svc/patent:__subpackages__"],
    deps = [
        "//go/pkg/log:go_default_library",
        "//go/svc/patent/internal/store:go_default_library",
        "//go/svc/patent/proto/service:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["service_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//go/pkg/testutil:go_default_library",
        "//go/svc/patent/internal/store:go_default_library",
        "//go/svc/patent/proto/service:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_sirupsen_logrus//hooks/test:go_default_library",
    ],
)
